# BraveApi

./: .agent_log.md  AGENTS.md  Argcfile.sh  README.md  _simple_search.py  httpobjects.py  lib.py  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: ResponseDocsMk2.md  ResponseSpecFinal.md  WebRequestSpec.md  WebResponseSpec.md  parse_html_docs.md
docs/raw/: parsed_api_docs.html  raw__ReponseSpec.html
docs/utils/: generate_models.py  parse_html_docs.py
tests/: test_client.py  test_dataobjs.py  test_integration_braveclient.py  test_realbraveclient.py
