[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "braveapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "aiolimiter>=1.2.1",
    "pydantic>=2.11.7",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "beautifulsoup4>=4.12.2",
    "black>=23.3.0",
    "ruff>=0.0.280",
    "mypy>=1.0.1",
]

[tool.black]
line-length = 88
target-version = ["py312"]
exclude = '''
/(
  \.venv
  | \.git
  | __pycache__
  | docs/utils
)/*'''

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "C", "UP", "I"]
ignore = ["E501"]
exclude = [".venv", ".git", "docs/utils"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true
